# eiu-vda5050-support-open-rmf

./: README.md
eiu_fleet_ui/: README.md  setup.cfg  setup.py
eiu_fleet_ui/eiu_fleet_ui/: colors.py  main.py  map_provider.py  mqtt_client.py  ros_bridge.py
eiu_fleet_ui/maps/: map.pgm  map.yaml  nav_graph.yaml  tb3_world.building.yaml
eiu_fleet_ui/qml/: main.qml
eiu_fleet_ui/qml/components/: NewTaskDialog.qml  RobotCard.qml
eiu_fleet_ui/qml/pages/: MapPage.qml  StatusPage.qml
tb3_simulation/: CMakeLists.txt
tb3_simulation/config/: nav2_params.yaml
tb3_simulation/docker/: Dockerfile  cmd.txt  docker-compose.yaml  entrypoint.sh  launch_docker.sh
tb3_simulation/launch/: tb3_simulation_nav2.launch.py
tb3_simulation/maps/tb3_world/: map.yaml  tb3_world.world
tb3_simulation/maps/tb3_world/models/tb3_world_tb3_world/: model.config  model.sdf
tb3_simulation/maps/tb3_world/nav_graphs/: 0.yaml
tb3_simulation/scripts/: patch_world.py
tb3_vda5050_bridge/: CMakeLists.txt  README.md
tb3_vda5050_bridge/config/: bridge_params.yaml
tb3_vda5050_bridge/docs/: architecture.md
tb3_vda5050_bridge/include/tb3_vda5050_bridge/: bridge_node.hpp  bridge_state_machine.hpp  order_session.hpp
tb3_vda5050_bridge/launch/: bridge.launch.py
tb3_vda5050_bridge/src/: bridge_node.cpp  bridge_state_machine.cpp  order_session.cpp
tb3_vda5050_bridge/test/: test_bridge_state_machine.cpp  test_order_session.cpp
vda5050_client_adapter/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
vda5050_client_adapter/config/: vda5050_params.yaml
vda5050_client_adapter/docker/mosquitto/: mosquitto.conf
vda5050_client_adapter/docs/: architecture.md  docker_guide.md  mqtt_test_guide.md
vda5050_client_adapter/include/vda5050_client_adapter/: action_manager.hpp  adapter_state_machine.hpp  json_converter.hpp  mqtt_client.hpp  order_manager.hpp  ros_converters.hpp  vda5050_node.hpp  vda5050_types.hpp
vda5050_client_adapter/launch/: vda5050_adapter.launch.py
vda5050_client_adapter/src/: action_manager.cpp  adapter_state_machine.cpp  main.cpp  mqtt_client.cpp  order_manager.cpp  vda5050_node.cpp
vda5050_client_adapter/test/: test_action_manager.cpp  test_adapter_state_machine.cpp  test_converters.cpp  test_order_manager.cpp
vda5050_fleet_adapter/: CMakeLists.txt  README.md
vda5050_fleet_adapter/config/: config.yaml  params.yaml
vda5050_fleet_adapter/docker/: Dockerfile  run.sh
vda5050_fleet_adapter/docs/: architecture.md
vda5050_fleet_adapter/include/vda5050_fleet_adapter/: fleet_adapter.hpp  robot_adapter.hpp  robot_command_handle.hpp  robot_state_machine.hpp  transform.hpp  vda5050_connector.hpp  vda5050_protocol.hpp
vda5050_fleet_adapter/launch/: fleet_adapter.launch.py
vda5050_fleet_adapter/scripts/: cancel_task.py  dispatch_patrol.py  mock_mqtt_robot.py  mock_robot_driver.py  test_dispatch_e2e.py  visualize_nav_graph.py
vda5050_fleet_adapter/src/: fleet_adapter.cpp  main.cpp  robot_adapter.cpp  robot_command_handle.cpp  robot_state_machine.cpp  vda5050_connector.cpp  vda5050_protocol.cpp
vda5050_fleet_adapter/test/: test_protocol.cpp  test_state_machine.cpp  test_transform.cpp
vda5050_msgs/: CMakeLists.txt  README.md
vda5050_msgs/msg/: Action.msg  ActionParameter.msg  ActionState.msg  AgvPosition.msg  BatteryState.msg  BoundingBoxReference.msg  Connection.msg  ControlPoint.msg  Corridor.msg  Edge.msg  EdgeState.msg  Error.msg  Header.msg  Info.msg  InfoReference.msg  InstantActions.msg  Load.msg  LoadDimensions.msg  MapInfo.msg  Node.msg  NodePosition.msg  NodeState.msg  Order.msg  SafetyState.msg  State.msg  Trajectory.msg  Velocity.msg  Visualization.msg
